packages/bastest/tests/cli/snapshots/reporting_test__cli_does_not_print_report_path_for_successful_agent_runs.snap
---
source: tests/cli/reporting_test.ts
expression: [
    `status: ${result.status}`,
    "stdout:",
    indentBlock(normalizeLog(result.stdout)),
    "stderr:",
    indentBlock(normalizeLog(result.stderr)),
  ].join("\n")
---
status: 0
stdout:
  
  ok | 1 passed | 0 failed | 0 ignored (<duration>)
stderr:
  <empty>
