packages/bastest/tests/cli/snapshots/reporting_test__cli_keeps_closing_quote_on_exact-width_wrapped_object_values.snap
---
source: packages/bastest/tests/cli/reporting_test.ts
---
status: 1
stdout:
  
  tests/fixtures/cli/reporting/exact-width-object_test.ts
    exact width object value ... fail (<duration>)
      AssertionError: Expected value to be truthy
  
      assert(actual.message === expected.message)
             |                  |                
                                {
                                  "message": "ok"
                                }
                                "ok"
             {
               "message": "zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
             }
             "zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
  
      <stack>
  
  fail | 0 passed | 1 failed | 0 ignored (<duration>)
stderr:
  <empty>
